# 5550-hotel-reservation-system

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  Dockerrun.aws.json  Procfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
reservation_system/: db.sqlite3  manage.py
reservation_system/apps/addresses/: models.py  serializers.py
reservation_system/apps/addresses/migrations/: 0001_initial.py
reservation_system/apps/hotels/: apps.py  models.py  serializers.py  urls.py  views.py
reservation_system/apps/hotels/management/commands/: seed_data.py
reservation_system/apps/hotels/migrations/: 0001_initial.py
reservation_system/apps/reservations/: models.py  serializers.py  tests.py  urls.py  views.py
reservation_system/apps/reservations/management/commands/: seed_data.py
reservation_system/apps/reservations/migrations/: 0001_initial.py  0002_reservation_price.py  0003_rename_person_to_guest.py
reservation_system/reservation_system/: asgi.py  settings.py  test_api_endpoints.py  urls.py  wsgi.py
reservation_system/reservation_system/management/commands/: seed_large_data.py
