[project]
name = "hotel-reservation-system"
version = "0.1.2"
description = "hotel reservation system for guests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.16.8",
    "coreapi>=2.3.3",
    "coreschema>=0.0.4",
    "drf-spectacular>=0.29.0",
    "Faker>=37.6.0",
    "gunicorn>=25.2.0",
    "mysqlclient>=2.2.8",
    "ruff>=0.15.7",
    "ty>=0.0.25",
    "uvicorn>=0.42.0",
    "whitenoise>=6.11.0",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "pytest-cov>=6.0.0",
    "model-bakery>=1.20.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "reservation_system.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--ds=reservation_system.settings --reuse-db"

